@@ -600,9 +600,23 @@ void ImGuiTestEngine_ApplyInputToImGuiContext(ImGuiTestEngine* engine)
                 if (mods != 0x00)
                 {
                     // OSX conversion
-#if IMGUI_VERSION_NUM >= 18912
+#if IMGUI_VERSION_NUM >= 18912 && IMGUI_VERSION_NUM < 19063
                     if (mods & ImGuiMod_Shortcut)
                         mods = (mods & ~ImGuiMod_Shortcut) | (g.IO.ConfigMacOSXBehaviors ? ImGuiMod_Super : ImGuiMod_Ctrl);
+#endif
+#if IMGUI_VERSION_NUM >= 19063
+                    // MacOS: swap Cmd(Super) and Ctrl WILL BE SWAPPED BACK BY io.AddKeyEvent()
+                    if (g.IO.ConfigMacOSXBehaviors)
+                    {
+                        if ((mods & (ImGuiMod_Ctrl | ImGuiMod_Super)) == ImGuiMod_Super)
+                            mods = (mods & ~ImGuiMod_Super) | ImGuiMod_Ctrl;
+                        else if ((mods & (ImGuiMod_Ctrl | ImGuiMod_Super)) == ImGuiMod_Ctrl)
+                            mods = (mods & ~ImGuiMod_Ctrl) | ImGuiMod_Super;
+                        if (key == ImGuiKey_LeftSuper)      { key = ImGuiKey_LeftCtrl; }
+                        else if (key == ImGuiKey_LeftSuper) { key = ImGuiKey_RightCtrl; }
+                        else if (key == ImGuiKey_LeftCtrl)  { key = ImGuiKey_LeftSuper; }
+                        else if (key == ImGuiKey_LeftCtrl)  { key = ImGuiKey_RightSuper; }
+                    }
 #endif
                     // Submitting a ImGuiMod_XXX without associated key needs to add at least one of the key.
                     if (mods & ImGuiMod_Ctrl)
